--- a/global.css
+++ b/global.css
@@ -48,7 +48,7 @@ header .user {
 }
 
 header .user a {
-    font-size: 13px;
+    font-size: 1.05em;
     color: #89949b;
     padding-top: 5px;
 }
@@ -65,13 +65,13 @@ main article {
 h3 {
     color: #b8c3c9;
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 0.95em;
     font-weight: normal;
     margin-bottom: 10px;
 }
 
 nav ul li a { 
-    font-size: 14px;
+    font-size: 1.1em;
     font-weight: normal;
     color: #828c92;
 }
@@ -96,14 +96,22 @@ nav ul li:last-child {
 
 h1 {
     color: #4b5c66;
-    font-size: 24px;
+    font-size: 2em;
     font-weight: normal;
     margin: 0 0 8px 0;
 }
+/*Si on utilise un petit écran (que ce soit avec un ordinateur dans une petite fenêtre ou avec un smartphone), les titres sont réduits */
+
+@media only screen and (max-width: 320px) {
+    h1 {
+    font-size: 0.5em;
+    }
+    }
+    
 
 .name p { 
     color: #a0aab1;
-    font-size: 12px;
+    font-size: 1em;
 }
 
 .name p img { 
@@ -113,7 +121,7 @@ h1 {
 
 .stats-links {
     color: #4b5c66;
-    font-size: 12px;
+    font-size: 1em;
     padding: 15px 0px 10px 0px;
     border-bottom: 1px solid #e1e6e9;
     margin-bottom: 20px;
@@ -128,13 +136,13 @@ h1 {
 }
 
 .stats-links a {
-    font-size: 12px;
+    font-size: 1em;
     font-weight: normal;
     color: #4b5c66;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 1.6em;
     font-weight: normal;
     color: #4b5c66;
 }
@@ -148,7 +156,7 @@ input.search {
     box-shadow: none;
     height: 28px;
     width: 100%;
-    font-size: 13px;
+    font-size: 1.05em;
     padding: 3px 6px 3px 25px;
     border: 1px solid #d0dde9;
     margin: 0;
@@ -162,7 +170,7 @@ input.submit {
 }
 
 .station {
-    font-size: 12px;
+    font-size: 1em;
     color: #008fd5;
     border-radius: 5px;
     border: 1px solid #b8c3c9;
@@ -226,6 +234,10 @@ nav a.top { background: url("../img/icon/top.png") no-repeat 0px; }
 nav a.new { background: url("../img/icon/new.png") no-repeat 0px; }
 nav a.collection { background: url("../img/icon/collection.png") no-repeat 0px; }
 nav a.history { background: url("../img/icon/history.png") no-repeat 0px; }
+
+@media screen and (min-width: 401px) and (max-width: 1024px) {
+    .my-content { display: none; }   /* hide it elsewhere */
+  }
 
 
 
